--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,9 @@
         "docker"
       ],
       "matchUpdateTypes": [
-        "major"
+        "major",
+        "minora",
+        "pin"
       ]
     }
   ]
